# ikaruga

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  test.lvl
project organisation/class-diagrams/: Sidescroller.vpp  Sidescroller.vpp~1  Sidescroller.vpp~2
res/: editor.lvl  jumper  labyrinth.xml  level.xml  level0.xml  level1.xml  level2.xml  level_coll.xml  pattern.lvl  test1.lvl  test_coll.lvl  test_collision.lvl  test_level.xml
res/advanced_settings/: bots.xml  items.xml  weapons.xml
res/images/: level0.lvl  level0.xml  rocks.ti
res/levels/: Nax.lvl  Path of revenge.xml  afjkl.xml  asdf.lvl  asdf.xml  ddtest.lvl  editor.xml  level0 (10. Kopie).xml  level0 (11. Kopie).xml  level0 (12. Kopie).xml  level0 (13. Kopie).xml  level0 (14. Kopie).xml  level0 (15. Kopie).xml  level0 (16. Kopie).xml  level0 (17. Kopie).xml  level0 (18. Kopie).xml  level0 (19. Kopie).xml  level0 (20. Kopie).xml  level0 (21. Kopie).xml  level0 (22. Kopie).xml  level0 (23. Kopie).xml  level0 (3. Kopie).xml  level0 (4. Kopie).xml  level0 (5. Kopie).xml  level0 (6. Kopie).xml  level0 (7. Kopie).xml  level0 (8. Kopie).xml  level0 (9. Kopie).xml  level0 (Kopie).xml  level0 (weitere Kopie).xml  level0.lvl  level0.xml  test1.lvl  testXml.xml  test_collision.lvl  tileset.lvl  tmp.lvl  tricky tubes.xml  wasd.xml
res/profiles/: profiles.xml
src/: Actor.cpp  Actor.hpp  AnimatedRenderable.cpp  AnimatedRenderable.hpp  Bot.cpp  Bot.hpp  Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  Item.hpp  Level.cpp  Level.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  PhysicPlayer.cpp  PhysicPlayer.hpp  PhysicWorld.cpp  PhysicWorld.hpp  Pixel.cpp  Pixel.hpp  Player.cpp  Player.hpp  PlayerProperites.hpp  PlayerProperties.cpp  Renderable.cpp  Renderable.hpp  ScoreBoard.hpp  SparseMatrix.cpp  SparseMatrix.hpp  SparseVector.cpp  SparseVector.hpp  StaticRenderable.hpp  TVector.hpp  TVector.tcc  TexturedLayer.cpp  TexturedLayer.hpp  Vector.hpp  Vector.tcc  (+10 more)
src/editor/: CMakeLists.txt  EditorMainWindow.cpp  EditorMainWindow.hpp  GraphicsTileItem.cpp  GraphicsTileItem.hpp  LevelScene.cpp  LevelScene.hpp  LevelView.ui  LevelView2.ui  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Settings.cpp  Settings.h  TextureScene.cpp  TextureScene.h  TextureScene.hpp  TilesetScene.cpp  TilesetScene.hpp  XMLSave.cpp  XMLSave.h  bot.cpp  bot.h  item.cpp  item.h  itemsettingsgui.cpp  itemsettingsgui.h  itemsettingsgui.ui  player.cpp  player.h
src/editor/app/: EditorMainWindow.cpp
src/editor/src/: LevelScene.cpp  TextureScene.cpp
src/editor/widgets/: LevelScene.hpp  TilesetScene.hpp
src/game/: Actor.cpp  Actor.hpp  AnimatedRenderable.cpp  AnimatedRenderable.hpp  Armed.cpp  Armed.hpp  BlasterWeapon.cpp  BlasterWeapon.hpp  Bot.cpp  Bot.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Collidable.cpp  Collidable.hpp  Collision.cpp  Collision.hpp  CollisionManager.cpp  CollisionManager.hpp  CppWeapon.cpp  CppWeapon.hpp  Filesystem.cpp  Filesystem.hpp  FontRender.cpp  FontRender.hpp  Game.cpp  Game.hpp  HighScore.cpp  HighScore.hpp  Item.cpp  Item.hpp  ItemShop.cpp  ItemShop.hpp  KillAnimation.cpp  KillAnimation.hpp  LaserWeapon.cpp  LaserWeapon.hpp  Level.cpp  Level.hpp  Main.cpp  (+63 more)
src/tests/: CMakeLists.txt  FilesystemTest.cpp
src/xml/: CMakeLists.txt  XML.cpp  XML.hpp  XmlTest.cpp  level0.xml
